# Gym-service

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-app.yml
app/: __init__.py  configs.py
app/admin/: __init__.py
app/admin/views/: __init__.py  exercises_view.py  muscles_view.py  trains_view.py  users_view.py
app/api/: __init__.py
app/api/exceptions/: __init__.py  entities.py  validations.py
app/api/routers/: auth_router.py  exercises_router.py  muscles_router.py  train_router.py  users_router.py
app/api/security/: utils.py
app/api/services/: __init__.py  exercises_service.py  history_service.py  muscles_service.py  train_service.py  user_service.py
app/db/: __init__.py  factories.py  primary.db  schemas.py
app/db/models/: __init__.py  base.py  exercise_model.py  history_model.py  muscle_model.py  train_model.py  user_model.py
tests/: conftest.py
tests/app/admin/: test_admin.py
tests/app/api/: conftest.py
tests/app/api/routers/: conftest.py  test_exercise_router.py  test_muscles_router.py  test_train_router.py  test_user_router.py
tests/app/api/services/: test_exercises_service.py  test_history_service.py  test_muscles_service.py  test_train_service.py  test_user_service.py
tests/app/db/: test_db.db
