[tool.poetry]
name = "homework4"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = '*'
fastapi = "^0.75.2"
SQLAlchemy = {extras = ["asyncio"], version = "^1.4.36"}
Flask-Admin = "^1.6.0"
aiosqlite = "^0.17.0"
greenlet = "^1.1.2"
uvicorn = "^0.17.6"
factory-boy = "^3.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
pydantic = {extras = ["dotenv"], version = "^1.9.1"}

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
autoflake = "^1.4"
isort = "^5.10.0"
black = "^22.1"
unify = "^0.5"
flake8 = "^4.0"
pylint = "^2.12.1"
mypy = "^0.940"
pytest-deadfixtures = "^2.2.1"
pytest-asyncio = "^0.18.3"
pytest-mock = "^3.7.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
